<resources>
    <string name="app_name">IAU E-COMMERCE</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is now very easy to reach the\n best quality among all the\n products on the internet</string>
    <string name="g_add_to_card">Add To Cart</string>
    <string name="g_my_cart">My Cart</string>
    <string name="g_total">Total</string>
    <string name="g_checkout">Checkout</string>
    <string name="g_your_shopping_cart_is_empty">Your Shopping Cart is Empty</string>
    <string name="g_address">Add Address\n</string>
    <string name="g_address_location_ie_home">Address location Ex: Home</string>
    <string name="g_full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="g_city">City</string>
    <string name="g_state">State\n</string>
    <string name="g_phone">Phone Number</string>
    <string name="g_delete">Delete</string>
    <string name="g_save">Save</string>
    <string name="g_payment_methods">Payment Methods</string>
    <string name="payment_explanation">You can pay online. It is much more convinent way.</string>
    <string name="g_shipping">Shipping Address</string>
    <string name="g_place_order">Place Order\n</string>
    <string name="g_select_address_error">Address Error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>